added queue with redis
