# backend/src/routes/ticketRankingRouter.ts
@@ -1,0 +1,7 @@
+import express from "express";
+import { getRanking } from "../controllers/ticketRanking/ticketRankingController";
+var router = express.Router();
+
+router.get("/ranking/getRanking", getRanking);
+
+export const ticketRankingRouter = router;
